# Hydrogen

./: .gitignore  Hydrogen.cabal  README.md  build  gen-www  hydrogen.cabal  poll  stack.yaml
doc/: todo
src/: Prelude.hs
src/H/: Annotation.hs  Chan.hs  Collection.hs  Common.hs  Error.hs  Generic.hs  IO.hs  Import.hs  Lexer.hs  MTM.hs  Monad.hs  Monoids.hs  Parser.hs  Phase.hs  Prelude.hs  Pretty.hs  PrettyPrint.hs  RefGraph.hs  Scope.hs  StringMethods.hs  Util.hs
src/H/Annotation/: Demo.hs  Internal.hs
src/H/Common/: IO.hs
src/H/Import/: IO.hs
src/H/Lexer/: Conduit.hs  Tokens.hs  Types.hs
src/H/Monad/: Errors.hs  Internal.hs  RefGraph.hs  Scope.hs  Stages.hs  State.hs  Types.hs
src/H/Monad/Internal/: Errors.hs  Types.hs
src/H/Phase/: CmdLine.hs  Types.hs
src/H/Prelude/: Aggregates.hs  Core.hs  Debug.hs  Monad.hs  Monads.hs  Num.hs  Text.hs
test/: Main.hs
