
name:           Hydrogen
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013 Karl Voelker
author:         Karl Voelker
maintainer:     ktvoelker@gmail.com
stability:      experimental
bug-reports:    mailto:ktvoelker@gmail.com
synopsis:       A language toolkit
category:       Language
tested-with:    GHC == 7.6.3

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base                 >= 4    && < 5,
    containers           >= 0.4  && < 0.6,
    text                 >= 0.11 && < 0.12,
    parsec               >= 3.1  && < 3.2,
    mtl                  >= 2.1  && < 2.2,
    comonad-transformers >= 3.0  && < 3.1,
    data-lens            >= 2.10 && < 2.11,
    data-lens-fd         >= 2.0  && < 2.1,
    data-lens-template   >= 2.1  && < 2.2,
    template-haskell     >= 2.7  && < 2.9,
    cmdtheline           >= 0.2  && < 0.3,
    pretty               >= 1.1  && < 1.2
  exposed-modules:
    H.Annotation
    H.Common
    H.Common.IO
    H.Lexer
    H.Parser
    H.Phase
  other-modules:
    H.Annotation.Demo
    H.Annotation.Internal
    H.Import
    H.Monad
    H.Phase.CmdLine
    H.Util
  default-extensions:
    NoImplicitPrelude
    TupleSections
    LambdaCase
    RecordWildCards
    NamedFieldPuns
    LiberalTypeSynonyms
    MultiParamTypeClasses
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    StandaloneDeriving
    RankNTypes
    TypeFamilies
  other-extensions:
    TemplateHaskell

