
name:           hydrogen
version:        0.2.0.0
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013 Karl Voelker
author:         Karl Voelker
maintainer:     hydrogen@karlv.net
stability:      experimental
bug-reports:    mailto:hydrogen@karlv.net
synopsis:       A utility library and alternate Prelude
category:       Prelude
tested-with:    GHC == 7.8.3

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base,
    containers,
    text,
    mtl,
    pretty,
    bytestring
  exposed-modules:
    H.Chan
    H.IO
    H.Prelude
    H.Pretty
  other-modules:
    H.Import
    H.Import.IO
    H.Util
  default-extensions:
    NoImplicitPrelude
    TupleSections
    LambdaCase
    RecordWildCards
    NamedFieldPuns
    LiberalTypeSynonyms
    MultiParamTypeClasses
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    StandaloneDeriving
    RankNTypes
    TypeFamilies
    ScopedTypeVariables
    ExplicitForAll
    ViewPatterns
    OverloadedStrings
    DeriveDataTypeable

