
name:           hydrogen
version:        0.2.0.0
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013-2015 Karl Voelker
author:         Karl Voelker
maintainer:     hydrogen@karlv.net
stability:      experimental
bug-reports:    mailto:hydrogen@karlv.net
synopsis:       A utility library and alternate Prelude
category:       Prelude
tested-with:    GHC == 7.8.3

Flag dev
  Description: Enable developer mode
  Default: False

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
  if flag(dev)
    ghc-options:
      -Werror
  build-depends:
    base       >= 4.7  && < 4.8,
    bytestring >= 0.10 && < 0.11,
    text       >= 1.2  && < 1.3,
    containers >= 0.5  && < 0.6,
    mtl        >= 2.1  && < 2.2,
    pretty     >= 1.1  && < 1.2
  exposed-modules:
    H.Chan
    H.IO
    H.Prelude
    H.Pretty
  other-modules:
    H.Import
    H.Import.IO
    H.Util
  default-extensions:
    NoImplicitPrelude
    TupleSections
    LambdaCase
    OverloadedStrings

Test-Suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
  if flag(dev)
    ghc-options:
      -Werror
  build-depends:
    base       >= 4.7  && < 4.8,
    containers >= 0.5  && < 0.6,
    mtl        >= 2.1  && < 2.2,
    QuickCheck >= 2.7  && < 2.8,
    Cabal      >= 1.10,
    hydrogen
  default-extensions:
    NoImplicitPrelude
    TupleSections
    LambdaCase
    OverloadedStrings
    TemplateHaskell

